--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
+* , body{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+.min-h-100{
+  min-height: 100vh !important;
+}
+.max-h-100{
+  max-height: 100vh !important;
+}
+.h-100{
+  height: 100vh !important;
+}
+input , select{
+  outline: none;
+  border: none; 
+}
+::-webkit-scrollbar{
+  width: 10px;
+}
+::-webkit-scrollbar-track{
+  background: #ec040400;
+  border-radius: 10px;
+}
+::-webkit-scrollbar-thumb{
+  background: #888;
+  border: 2px #0f172a solid;
+  border-radius: 10px;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
